--- a/aula-php-marcos/aula01/style/style.css
+++ b/aula-php-marcos/aula01/style/style.css
@@ -2,6 +2,13 @@ header{
     background-color: blueviolet;
     color: #fff;
     width: 100%;
+    height: 5vh;
+    display: flex;
+    align-items: center;
+}
+
+body{
+    background-color: blanchedalmond;
 }
 
 nav{
@@ -13,6 +20,51 @@ nav{
 
 main{
     width: 100%;
-    background-color: blanchedalmond;
-    height: 40vh;
+    /* background-color: blanchedalmond; */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between ;
+    backdrop-filter: blur(10px)
+
+}
+
+#box{
+    height: 20vh;
+    width: 18%;
+    margin: 1vh;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#cabeca{
+    background-color: #fff;
+    width: 100%;
+    height: 2.5vh;
+    justify-content: center;
+    justify-items: center;
+    display: flex;
+}
+
+#conteudo{
+    width: 80%;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #d7ba97;
+    
+}
+
+#data{
+    width: 20%;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+}
+
+#numData{
+    background-color: #fff;
+    width: 100%;
+    height: 5vh;
+    text-align: center;
 }
